simplified redirect URI creation and send response_type